fix odd jump

--- a/css/p100.css
+++ b/css/p100.css
@@ -405,7 +405,7 @@ border-radius: 0;
 .alumni_spot{
   clear:both;
   display:block;
-  margin: 60px 0;
+  padding: 60px 0;
 }
 
 .thumbnail.alumni{
